// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionTile should render correctly with an custom wrapper 1`] = `
<span
  className="OptionTile"
>
  <h6>
    tile label
  </h6>
  <p
    className="Content"
  >
    tile content
  </p>
</span>
`;

exports[`OptionTile should render correctly with default wrapper 1`] = `
<UnstyledLink
  className="OptionTile"
>
  <h6>
    tile label
  </h6>
  <p
    className="Content"
  >
    tile content
  </p>
</UnstyledLink>
`;
